# QFreeCharts

./: CMakeLists.txt  FreeChart.cpp  FreeChart.h  FreeChartsConfig.cmake.in  main.cpp
source/: Main.qml  Resources.qrc  main.cpp
source/Qml/: LineChart.qml  Main.qml
source/Series/: Series.cpp  Series.h
source/Shaders/: Compiling_instructions.txt  Rotation.frag  Rotation.frag.qsb  Rotation.vert  Rotation.vert.qsb  RotationMaterial.cpp  RotationMaterial.h  RotationNode.cpp  RotationNode.h  RotationShader.cpp  RotationShader.h
